versioned_docs/version-2.17.x/reference/targets/experimental_wrap_as_scala_sources.mdx
---
title: experimental_wrap_as_scala_sources
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Allow files and sources produced by the targets specified by `inputs` to be consumed by rules that specifically expect a `ScalaSourceField`.

Note that this target does not modify the files in any way. If `outputs` is not specified, all files with the following extensions will be matched: .scala

This target must be explicitly specified as a dependency of any target that requires it. Sources from this target will not be automatically inferred as dependencies.

This target is experimental: in future versions of Pants, this functionality may be made available with a different interface.

Backend: <span className="color--primary">`pants.backend.experimental.scala`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

## `inputs`

<Field
    type_repr={`field.type_hint`}
>

The input targets that are to be made available by this target.

</Field>

## `outputs`

<Field
    type_repr={`field.type_hint`}
>

The output files that are made available in the new context by this target. If not specified, the target will capture all files with the expected extensions for this source format: see the help for the target for the specific extensions. If no extensions are specified and this value is not specified, all input files will be returned.

</Field>

</span>
