versioned_docs/version-2.18/reference/targets/experimental_wrap_as_scala_sources.mdx
---
title: experimental_wrap_as_scala_sources
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Allow files and sources produced by the targets specified by `inputs` to be consumed by rules that specifically expect a `ScalaSourceField`.

Note that this target does not modify the files in any way. If `outputs` is not specified, all files with the following extensions will be matched: .scala

This target must be explicitly specified as a dependency of any target that requires it. Sources from this target will not be automatically inferred as dependencies.

This target is experimental: in future versions of Pants, this functionality may be made available with a different interface.

Backend: <span className="color--primary">`pants.backend.experimental.scala`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinputscode}
</div>

## `inputs`

<Field
    type_repr={`Iterable[str]`}
    default_repr={`None`}
>

The input targets that are to be made available by this target.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutputscode}
</div>

## `outputs`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The output files that are made available in the new context by this target. If not specified, the target will capture all files with the expected extensions for this source format: see the help for the target for the specific extensions. If no extensions are specified and this value is not specified, all input files will be returned.

</Field>

</span>
